crates/slate/tests/snapshots/atomic_widths.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[allow(non_camel_case_types)]
#[derive(Clone, Copy, PartialEq, Eq, Debug, Hash)]
enum memory_order {
    memory_order_relaxed = 0,
    memory_order_consume = 1,
    memory_order_acquire = 2,
    memory_order_release = 3,
    memory_order_acq_rel = 4,
    memory_order_seq_cst = 5,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut u8: u8 = 0;
    let mut i8: i8 = 0;
    let mut u32: u32 = 0;
    let mut i64: i64 = 0;
    let mut old_u8: u8 = 0;
    let mut old_i8: i8 = 0;
    let mut old_u32: u32 = 0;
    let mut old_i64: i64 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: u8 = 250;
    u8 = _v1;
    let _v2: i8 = -5;
    i8 = _v2;
    let _v3: u32 = 1000;
    u32 = _v3;
    let _v4: i64 = -10000000000i64;
    i64 = _v4;
    let _v5: u8 = 3;
    let _v6: u8 = unsafe { std::sync::atomic::AtomicU8::from_ptr(std::ptr::addr_of_mut!(u8)).fetch_add(_v5, std::sync::atomic::Ordering::Relaxed) };
    old_u8 = _v6;
    let _v7: i8 = 7;
    let _v8: i8 = unsafe { std::sync::atomic::AtomicI8::from_ptr(std::ptr::addr_of_mut!(i8)).fetch_sub(_v7, std::sync::atomic::Ordering::AcqRel) };
    old_i8 = _v8;
    let _v9: u32 = 255;
    let _v10: u32 = unsafe { std::sync::atomic::AtomicU32::from_ptr(std::ptr::addr_of_mut!(u32)).fetch_xor(_v9, std::sync::atomic::Ordering::Release) };
    old_u32 = _v10;
    let _v11: i64 = 1234567890123i64;
    let _v12: i64 = unsafe { std::sync::atomic::AtomicI64::from_ptr(std::ptr::addr_of_mut!(i64)).swap(_v11, std::sync::atomic::Ordering::Acquire) };
    old_i64 = _v12;
    let _v13: *mut i8 = b"%u %d %u %lld %u %d %u %lld\n\0".as_ptr() as *mut i8;
    let _v14: u8 = old_u8;
    let _v15: i32 = _v14 as i32;
    let _v16: i8 = old_i8;
    let _v17: i32 = _v16 as i32;
    let _v18: u32 = old_u32;
    let _v19: i64 = old_i64;
    let _v20: u8 = unsafe { std::sync::atomic::AtomicU8::from_ptr(std::ptr::addr_of_mut!(u8)).load(std::sync::atomic::Ordering::SeqCst) };
    let _v21: i32 = _v20 as i32;
    let _v22: i8 = unsafe { std::sync::atomic::AtomicI8::from_ptr(std::ptr::addr_of_mut!(i8)).load(std::sync::atomic::Ordering::SeqCst) };
    let _v23: i32 = _v22 as i32;
    let _v24: u32 = unsafe { std::sync::atomic::AtomicU32::from_ptr(std::ptr::addr_of_mut!(u32)).load(std::sync::atomic::Ordering::SeqCst) };
    let _v25: i64 = unsafe { std::sync::atomic::AtomicI64::from_ptr(std::ptr::addr_of_mut!(i64)).load(std::sync::atomic::Ordering::SeqCst) };
    let _v26: i32 = unsafe { printf(_v13 as *const i8, _v15, _v17, _v18, _v19, _v21, _v23, _v24, _v25) };
    let _v27: i32 = 0;
    __retval = _v27;
    let _v28: i32 = __retval;
    std::process::exit(_v28 as i32);
}
