crates/slate/tests/snapshots/break_for.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn first_multiple(arg0: i32, arg1: i32) -> i32 {
    let mut n: i32 = 0;
    let mut m: i32 = 0;
    let mut __retval: i32 = 0;
    n = arg0;
    m = arg1;
    {
        let mut i: i32 = 0;
        let _v0: i32 = 1;
        i = _v0;
        loop {
            let _v1: i32 = i;
            let _v2: i32 = n;
            let _v3: bool = _v1 <= _v2;
            if !_v3 {
                break;
            }
            {
                {
                    let _v4: i32 = i;
                    let _v5: i32 = m;
                    let _v6: i32 = _v4 % _v5;
                    let _v7: i32 = 0;
                    let _v8: bool = _v6 == _v7;
                    if _v8 {
                        let _v9: i32 = i;
                        __retval = _v9;
                        let _v10: i32 = __retval;
                        return _v10;
                    }
                }
                {
                    let _v11: i32 = i;
                    let _v12: i32 = 100;
                    let _v13: bool = _v11 > _v12;
                    if _v13 {
                        break;
                    }
                }
            }
            let _v14: i32 = i;
            let _v15: i32 = _v14 + 1;
            i = _v15;
        }
    }
    let _v16: i32 = -1;
    __retval = _v16;
    let _v17: i32 = __retval;
    return _v17;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 50;
    let _v3: i32 = 7;
    let _v4: i32 = first_multiple(_v2, _v3);
    let _v5: i32 = unsafe { printf(_v1 as *const i8, _v4) };
    let _v6: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v7: i32 = 3;
    let _v8: i32 = 7;
    let _v9: i32 = first_multiple(_v7, _v8);
    let _v10: i32 = unsafe { printf(_v6 as *const i8, _v9) };
    let _v11: i32 = 0;
    __retval = _v11;
    let _v12: i32 = __retval;
    std::process::exit(_v12 as i32);
}
