crates/slate/tests/snapshots/break_while.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn countdown(arg0: i32) -> i32 {
    let mut n: i32 = 0;
    let mut __retval: i32 = 0;
    let mut steps: i32 = 0;
    n = arg0;
    let _v0: i32 = 0;
    steps = _v0;
    {
        loop {
            let _v1: i32 = 1;
            let _v2: bool = _v1 != 0;
            if !_v2 {
                break;
            }
            {
                {
                    let _v3: i32 = n;
                    let _v4: i32 = 0;
                    let _v5: bool = _v3 <= _v4;
                    if _v5 {
                        break;
                    }
                }
                let _v6: i32 = 2;
                let _v7: i32 = n;
                let _v8: i32 = _v7 / _v6;
                n = _v8;
                let _v9: i32 = steps;
                let _v10: i32 = _v9 + 1;
                steps = _v10;
            }
        }
    }
    let _v11: i32 = steps;
    __retval = _v11;
    let _v12: i32 = __retval;
    return _v12;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 100;
    let _v3: i32 = countdown(_v2);
    let _v4: i32 = unsafe { printf(_v1 as *const i8, _v3) };
    let _v5: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v6: i32 = 0;
    let _v7: i32 = countdown(_v6);
    let _v8: i32 = unsafe { printf(_v5 as *const i8, _v7) };
    let _v9: i32 = 0;
    __retval = _v9;
    let _v10: i32 = __retval;
    std::process::exit(_v10 as i32);
}
