crates/slate/tests/snapshots/buffer_cursor.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct cursor {
    ptr: *mut i32,
}


unsafe extern "C" {
    fn getchar() -> i32;
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut values: aligned::Aligned<aligned::A16, [i32; 4]> = aligned::Aligned([0; 4]);
    let mut c: cursor = cursor { ptr: std::ptr::null_mut() };
    let mut d: cursor = cursor { ptr: std::ptr::null_mut() };
    let _v0: i32 = 0;
    __retval = _v0;
    {
        let mut i: i32 = 0;
        let _v1: i32 = 0;
        i = _v1;
        loop {
            let _v2: i32 = i;
            let _v3: i32 = 4;
            let _v4: bool = _v2 < _v3;
            if !_v4 {
                break;
            }
            {
                let _v5: i32 = i;
                let _v6: i32 = unsafe { getchar() };
                let _v7: i32 = _v5 + _v6;
                let _v8: i32 = i;
                let _v9: i64 = _v8 as i64;
                values[(_v9 as usize)] = _v7;
            }
            let _v10: i32 = i;
            let _v11: i32 = _v10 + 1;
            i = _v11;
        }
    }
    let _v12: *mut i32 = values.as_mut_ptr() as *mut i32;
    let _v13: i32 = 1;
    let _v14: *mut i32 = unsafe { _v12.add(1) };
    c.ptr = _v14;
    let _v15: *mut i32 = values.as_mut_ptr() as *mut i32;
    let _v16: i32 = 3;
    let _v17: *mut i32 = unsafe { _v15.add(3) };
    d.ptr = _v17;
    let _v18: *mut i8 = b"%d %ld\n\0".as_ptr() as *mut i8;
    let _v19: *mut i32 = c.ptr;
    let _v20: i32 = unsafe { *_v19 };
    let _v21: *mut i32 = d.ptr;
    let _v22: i32 = unsafe { *_v21 };
    let _v23: i32 = _v20 + _v22;
    let _v24: *mut i32 = d.ptr;
    let _v25: *mut i32 = c.ptr;
    let _v26: i64 = unsafe { _v24.offset_from(_v25) as i64 };
    let _v27: i32 = unsafe { printf(_v18 as *const i8, _v23, _v26) };
    let _v28: i32 = 0;
    __retval = _v28;
    let _v29: i32 = __retval;
    std::process::exit(_v29 as i32);
}
