crates/slate/tests/snapshots/c23_nullptr.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut null_value: *mut core::ffi::c_void = std::ptr::null_mut();
    let mut null_pointer: *mut i32 = std::ptr::null_mut();
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut core::ffi::c_void = std::ptr::null_mut();
    unsafe { std::ptr::write_volatile(std::ptr::addr_of_mut!(null_value), _v1) };
    let _v2: *mut i32 = std::ptr::null_mut();
    null_pointer = _v2;
    let _v3: *mut i8 = b"%d %d\n\0".as_ptr() as *mut i8;
    let _v4: *mut core::ffi::c_void = std::ptr::null_mut();
    let _v5: *mut core::ffi::c_void = std::ptr::null_mut();
    let _v6: bool = _v4 == _v5;
    let _v7: i32 = _v6 as i32;
    let _v8: *mut i32 = null_pointer;
    let _v9: *mut i32 = std::ptr::null_mut();
    let _v10: bool = _v8 == _v9;
    let _v11: i32 = _v10 as i32;
    let _v12: i32 = unsafe { printf(_v3 as *const i8, _v7, _v11) };
    let _v13: i32 = 0;
    __retval = _v13;
    let _v14: i32 = __retval;
    std::process::exit(_v14 as i32);
}
