crates/slate/tests/snapshots/c_string_literal.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn first_plus_last(arg0: *mut i8) -> i32 {
    let mut s: *mut i8 = std::ptr::null_mut();
    let mut __retval: i32 = 0;
    s = arg0;
    let _v0: i64 = 0;
    let _v1: *mut i8 = s;
    let _v2: *mut i8 = unsafe { _v1.add(0) };
    let _v3: i8 = unsafe { *_v2 };
    let _v4: i32 = _v3 as i32;
    let _v5: i64 = 10;
    let _v6: *mut i8 = s;
    let _v7: *mut i8 = unsafe { _v6.add(10) };
    let _v8: i8 = unsafe { *_v7 };
    let _v9: i32 = _v8 as i32;
    let _v10: i32 = _v4 + _v9;
    __retval = _v10;
    let _v11: i32 = __retval;
    return _v11;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut message: *mut i8 = std::ptr::null_mut();
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"write error\0".as_ptr() as *mut i8;
    message = _v1;
    let _v2: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v3: *mut i8 = message;
    let _v4: i32 = first_plus_last(_v3);
    let _v5: i32 = unsafe { printf(_v2 as *const i8, _v4) };
    let _v6: i32 = 0;
    __retval = _v6;
    let _v7: i32 = __retval;
    std::process::exit(_v7 as i32);
}
