crates/slate/tests/snapshots/casts.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut d: f64 = 0.0;
    let mut f: f32 = 0.0;
    let mut i: i32 = 0;
    let mut u: u32 = 0;
    let mut l: i64 = 0;
    let mut c: u8 = 0;
    let mut b0: bool = false;
    let mut b1: bool = false;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: f64 = 7.75;
    d = _v1;
    let _v2: f64 = d;
    let _v3: f32 = _v2 as f32;
    f = _v3;
    let _v4: f64 = d;
    let _v5: i32 = _v4 as i32;
    i = _v5;
    let _v6: u32 = 4294967295u32;
    u = _v6;
    let _v7: i32 = i;
    let _v8: i64 = _v7 as i64;
    l = _v8;
    let _v9: u8 = 4;
    c = _v9;
    let _v10: f64 = 0.0;
    let _v11: bool = _v10 != 0.0;
    b0 = _v11;
    let _v12: i32 = -3;
    let _v13: bool = _v12 != 0;
    b1 = _v13;
    let _v14: *mut i8 = b"%f\n\0".as_ptr() as *mut i8;
    let _v15: f32 = f;
    let _v16: f64 = _v15 as f64;
    let _v17: i32 = unsafe { printf(_v14 as *const i8, _v16) };
    let _v18: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v19: i32 = i;
    let _v20: i32 = unsafe { printf(_v18 as *const i8, _v19) };
    let _v21: *mut i8 = b"%u\n\0".as_ptr() as *mut i8;
    let _v22: u32 = u;
    let _v23: i32 = unsafe { printf(_v21 as *const i8, _v22) };
    let _v24: *mut i8 = b"%ld\n\0".as_ptr() as *mut i8;
    let _v25: i64 = l;
    let _v26: i32 = unsafe { printf(_v24 as *const i8, _v25) };
    let _v27: *mut i8 = b"%u\n\0".as_ptr() as *mut i8;
    let _v28: u8 = c;
    let _v29: i32 = _v28 as i32;
    let _v30: i32 = unsafe { printf(_v27 as *const i8, _v29) };
    let _v31: *mut i8 = b"%d %d\n\0".as_ptr() as *mut i8;
    let _v32: bool = b0;
    let _v33: i32 = _v32 as i32;
    let _v34: bool = b1;
    let _v35: i32 = _v34 as i32;
    let _v36: i32 = unsafe { printf(_v31 as *const i8, _v33, _v35) };
    let _v37: i32 = 0;
    __retval = _v37;
    let _v38: i32 = __retval;
    std::process::exit(_v38 as i32);
}
