crates/slate/tests/snapshots/chars.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn add_char(arg0: i8, arg1: i8) -> i8 {
    let mut a: i8 = 0;
    let mut b: i8 = 0;
    let mut __retval: i8 = 0;
    let mut c: i8 = 0;
    a = arg0;
    b = arg1;
    let _v0: i8 = a;
    let _v1: i32 = _v0 as i32;
    let _v2: i8 = b;
    let _v3: i32 = _v2 as i32;
    let _v4: i32 = _v1 + _v3;
    let _v5: i8 = _v4 as i8;
    c = _v5;
    let _v6: i8 = c;
    __retval = _v6;
    let _v7: i8 = __retval;
    return _v7;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut x: i8 = 0;
    let mut y: u8 = 0;
    let mut z: i8 = 0;
    let mut letter: i8 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i8 = 10;
    x = _v1;
    let _v2: u8 = 200;
    y = _v2;
    let _v3: i8 = -5;
    z = _v3;
    let _v4: i8 = 65;
    letter = _v4;
    let _v5: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v6: i8 = x;
    let _v7: i8 = z;
    let _v8: i8 = add_char(_v6, _v7);
    let _v9: i32 = _v8 as i32;
    let _v10: i32 = unsafe { printf(_v5 as *const i8, _v9) };
    let _v11: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v12: u8 = y;
    let _v13: i32 = _v12 as i32;
    let _v14: i32 = unsafe { printf(_v11 as *const i8, _v13) };
    let _v15: *mut i8 = b"%c\n\0".as_ptr() as *mut i8;
    let _v16: i8 = letter;
    let _v17: i32 = _v16 as i32;
    let _v18: i32 = unsafe { printf(_v15 as *const i8, _v17) };
    let _v19: *mut i8 = b"%c\n\0".as_ptr() as *mut i8;
    let _v20: i8 = letter;
    let _v21: i32 = _v20 as i32;
    let _v22: i32 = 1;
    let _v23: i32 = _v21 + _v22;
    let _v24: i32 = unsafe { printf(_v19 as *const i8, _v23) };
    let _v25: i32 = 0;
    __retval = _v25;
    let _v26: i32 = __retval;
    std::process::exit(_v26 as i32);
}
