crates/slate/tests/snapshots/compound_assignments.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut a: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 20;
    a = _v1;
    let _v2: i32 = 5;
    let _v3: i32 = a;
    let _v4: i32 = _v3 - _v2;
    a = _v4;
    let _v5: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v6: i32 = a;
    let _v7: i32 = unsafe { printf(_v5 as *const i8, _v6) };
    let _v8: i32 = 3;
    let _v9: i32 = a;
    let _v10: i32 = _v9 * _v8;
    a = _v10;
    let _v11: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v12: i32 = a;
    let _v13: i32 = unsafe { printf(_v11 as *const i8, _v12) };
    let _v14: i32 = 5;
    let _v15: i32 = a;
    let _v16: i32 = _v15 / _v14;
    a = _v16;
    let _v17: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v18: i32 = a;
    let _v19: i32 = unsafe { printf(_v17 as *const i8, _v18) };
    let _v20: i32 = 7;
    let _v21: i32 = a;
    let _v22: i32 = _v21 % _v20;
    a = _v22;
    let _v23: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v24: i32 = a;
    let _v25: i32 = unsafe { printf(_v23 as *const i8, _v24) };
    let _v26: i32 = 3;
    let _v27: i32 = a;
    let _v28: i32 = _v27 << _v26;
    a = _v28;
    let _v29: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v30: i32 = a;
    let _v31: i32 = unsafe { printf(_v29 as *const i8, _v30) };
    let _v32: i32 = 2;
    let _v33: i32 = a;
    let _v34: i32 = _v33 >> _v32;
    a = _v34;
    let _v35: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v36: i32 = a;
    let _v37: i32 = unsafe { printf(_v35 as *const i8, _v36) };
    let _v38: i32 = 6;
    let _v39: i32 = a;
    let _v40: i32 = _v39 & _v38;
    a = _v40;
    let _v41: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v42: i32 = a;
    let _v43: i32 = unsafe { printf(_v41 as *const i8, _v42) };
    let _v44: i32 = 3;
    let _v45: i32 = a;
    let _v46: i32 = _v45 ^ _v44;
    a = _v46;
    let _v47: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v48: i32 = a;
    let _v49: i32 = unsafe { printf(_v47 as *const i8, _v48) };
    let _v50: i32 = 8;
    let _v51: i32 = a;
    let _v52: i32 = _v51 | _v50;
    a = _v52;
    let _v53: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v54: i32 = a;
    let _v55: i32 = unsafe { printf(_v53 as *const i8, _v54) };
    let _v56: i32 = 0;
    __retval = _v56;
    let _v57: i32 = __retval;
    std::process::exit(_v57 as i32);
}
